# VibeStudio

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  README.md  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: attribution_update.md  bug_report.md  compiler_integration.md  feature_request.md  format_support.md
.github/workflows/: compiler-submodules.yml  pr-ci.yml  release-nightly.yml
assets/: README.md
docs/: ACCESSIBILITY_LOCALIZATION.md  AI_AUTOMATION.md  ARCHITECTURE.md  CLI_STRATEGY.md  COMPILER_INTEGRATION.md  CONTRIBUTING.md  CREDITS.md  DEPENDENCIES.md  EDITOR_PROFILES.md  EFFICIENCY.md  GAME_INSTALLATIONS.md  INITIAL_SETUP.md  OFFLINE_USER_GUIDE.md  PACKAGING.md  RELEASE_CANDIDATE.md  ROADMAP.md  STACK.md  SUPPORT_MATRIX.md  UX_DESIGN.md
docs/plans/: ericw-tools-high-value-resolution.md  ericw-tools-open-issues-audit.md  ericw-tools-ralph-worklog.md  ericw-tools-remaining-bugs-resolution.md
i18n/: README.md  vibestudio_ar.ts  vibestudio_bn.ts  vibestudio_de.ts  vibestudio_en.ts  vibestudio_es.ts  vibestudio_fr.ts  vibestudio_hi.ts  vibestudio_id.ts  vibestudio_ja.ts  vibestudio_ko.ts  vibestudio_mr.ts  vibestudio_pcm.ts  vibestudio_pseudo.ts  vibestudio_pt_BR.ts  vibestudio_ru.ts  vibestudio_ta.ts  vibestudio_te.ts  vibestudio_tr.ts  vibestudio_ur.ts  vibestudio_vi.ts  vibestudio_zh_Hans.ts
packaging/: README.md
samples/: README.md
samples/projects/doom-minimal/.vibestudio/: project.json
samples/projects/doom-minimal/maps/: E1M1.txt  doom_stub.wad
samples/projects/doom-minimal/scripts/: mapinfo.txt
samples/projects/quake-minimal/.vibestudio/: project.json
samples/projects/quake-minimal/maps/: start.map
samples/projects/quake-minimal/scripts/: quake.rc
samples/projects/quake3-minimal/.vibestudio/: project.json
samples/projects/quake3-minimal/maps/: sample_q3.map
samples/projects/quake3-minimal/scripts/: arena.txt
scripts/: extract_translations.py  generate_offline_guide.py  meson_build.ps1  package_portable.py  sync_doc_versions.py  validate_build.py  validate_cli_docs.py  validate_credits.py  validate_docs.py  validate_packaging.py  validate_release_assets.py  validate_samples.py  validate_source_layout.py
src/: main.cpp  meson.build  vibestudio_config.h.in
src/app/: application_shell.cpp  application_shell.h  ui_primitives.cpp  ui_primitives.h
src/cli/: cli.cpp  cli.h
src/core/: advanced_studio.cpp  advanced_studio.h  ai_connectors.cpp  ai_connectors.h  ai_workflows.cpp  ai_workflows.h  asset_tools.cpp  asset_tools.h  compiler_artifact_validation.cpp  compiler_artifact_validation.h  compiler_known_issues.cpp  compiler_known_issues.h  compiler_profiles.cpp  compiler_profiles.h  compiler_registry.cpp  compiler_registry.h  compiler_runner.cpp  compiler_runner.h  editor_profiles.cpp  editor_profiles.h  ericw_map_preflight.cpp  ericw_map_preflight.h  game_installation.cpp  game_installation.h  level_map.cpp  level_map.h  localization.cpp  localization.h  operation_state.cpp  operation_state.h  package_archive.cpp  package_archive.h  package_preview.cpp  package_preview.h  package_staging.cpp  package_staging.h  project_manifest.cpp  project_manifest.h  studio_manifest.cpp  studio_manifest.h  (+4 more)
src/tests/: advanced_studio_smoke_test.cpp  ai_connectors_smoke_test.cpp  ai_workflows_smoke_test.cpp  asset_tools_smoke_test.cpp  compiler_artifact_validation_smoke_test.cpp  compiler_known_issues_smoke_test.cpp  compiler_profiles_smoke_test.cpp  compiler_registry_smoke_test.cpp  core_smoke_test.cpp  editor_profiles_smoke_test.cpp  ericw_map_preflight_smoke_test.cpp  game_installation_smoke_test.cpp  level_map_smoke_test.cpp  localization_smoke_test.cpp  operation_state_smoke_test.cpp  package_archive_smoke_test.cpp  package_preview_smoke_test.cpp  package_staging_smoke_test.cpp  project_manifest_smoke_test.cpp  settings_smoke_test.cpp  studio_semantics_smoke_test.cpp  ui_primitives_smoke_test.cpp
